# clical

./: pyproject.toml
.github/workflows/: main.yml  release.yml
clical/: main.py
tests/: test_clical.py
