[tool.poetry]
name = "clical"
version = "0.1.0"
description = ""
authors = ["kk <k@kashwaa.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clical = "clical.main:main"